<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@drawable/bg_header_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/Calculator"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        tools:text="KALKULATOR"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_balok"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/custom_btn"
        android:text="@string/Balok"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Balok"
        />

    <Button
        android:id="@+id/btn_bola"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_btn"
        android:text="@string/Bola"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kubus"
        tools:text="Bola" />

    <Button
        android:id="@+id/btn_kerucut"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_btn"
        android:text="@string/Kerucut"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bola"
        tools:text="Kerucut" />

    <Button
        android:id="@+id/btn_kubus"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_btn"
        android:text="@string/Kubus"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_balok"
        tools:text="Kubus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="16dp"
        android:text="Created By : Deeka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/copyright"/>

</androidx.constraintlayout.widget.ConstraintLayout>